# dev-sync

./: .gitignore  CODEOWNERS  LICENSE  Makefile  NOTES.md  README.md  pyproject.toml  setup.cfg
src/dev_sync/: cli.py  console.py  logging.py  main.py  rich_click.py
src/dev_sync/commands/: _git_utils.py  add_private_file.py  add_secret.py  bootstrap.py  clone.py  commit.py  init.py  pull.py  sync.py
