[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-sync"
dynamic = ["version"]
description = "A tool to sync development environments across machines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Erick Benitez-Ramos", email = "erickbenitez336@gmail.com"}
]
dependencies = [
    "saiuncli>=0.1.8"
]

[project.urls]
repository = "https://github.com/Erickkbentz/dev-sync"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "dev_sync.__version__"}

[project.scripts]
dev-sync = "dev_sync.cli:main"
